--- a/pom.xml
+++ b/pom.xml
@@ -2384,6 +2384,36 @@
                 <artifactId>org.wso2.carbon.identity.saml.common.util</artifactId>
                 <version>${saml.common.util.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-models</artifactId>
+                <version>${io.swagger.models.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-core</artifactId>
+                <version>${io.swagger.core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${io.swagger.annotation.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-yaml</artifactId>
+                <version>${jackson.dataformat.yaml.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>${javax.validation.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <properties>
@@ -2423,7 +2453,7 @@
         <carbon.identity.oauth.version>6.1.0</carbon.identity.oauth.version>
         <carbon.identity.oauth.imp.pkg.version>[6.1.0, 7.0.0)</carbon.identity.oauth.imp.pkg.version>
         <!--Axis2 versions-->
-        <orbit.version.axis2>1.6.1-wso2v40</orbit.version.axis2>
+        <orbit.version.axis2>1.6.1-wso2v43</orbit.version.axis2>
         <orbit.version.axis2.client>${orbit.version.axis2}</orbit.version.axis2.client>
         <axis2-transports.base.version>${orbit.version.axis2}</axis2-transports.base.version>
         <axis2.osgi.version.range>[1.6.1, 1.7.0)</axis2.osgi.version.range>
@@ -2576,6 +2606,12 @@
         <maven.bundle.plugin.version>3.2.0</maven.bundle.plugin.version>
         <saml.common.util.version>1.0.3</saml.common.util.version>
         <opensaml.orbit.version>3.3.1.wso2v1</opensaml.orbit.version>
+        <io.swagger.models.version>1.5.23</io.swagger.models.version>
+        <io.swagger.core.version>1.5.23</io.swagger.core.version>
+        <io.swagger.annotation.version>1.5.23</io.swagger.annotation.version>
+        <jackson.dataformat.yaml.version>2.9.9</jackson.dataformat.yaml.version>
+        <javax.validation.version>1.1.0.Final</javax.validation.version>
+        <snakeyaml.version>1.25</snakeyaml.version>
     </properties>
     <pluginRepositories>
         <pluginRepository>
