Refactor rabbitmq inbound with the latest amqp client
- completely revamp the older implementation
- change the existing implementation of requeue message
- add some parameters to the UI for requeue functionality

--- a/components/mediation-ui/org.wso2.carbon.inbound.ui/src/main/resources/config/inbound.properties
+++ b/components/mediation-ui/org.wso2.carbon.inbound.ui/src/main/resources/config/inbound.properties
@@ -194,7 +194,7 @@ rabbitmq.mandatory.7=rabbitmq.server.password
 rabbitmq.mandatory.8=rabbitmq.queue.name
 rabbitmq.mandatory.9=rabbitmq.exchange.name
 
-rabbitmq.optional=23
+rabbitmq.optional=27
 rabbitmq.optional.1=rabbitmq.queue.durable ~:~ true ~:~ false
 rabbitmq.optional.2=rabbitmq.queue.exclusive ~:~ false ~:~ true
 rabbitmq.optional.3=rabbitmq.queue.auto.delete ~:~ false ~:~ true
@@ -208,16 +208,20 @@ rabbitmq.optional.10=rabbitmq.message.content.type
 rabbitmq.optional.11=rabbitmq.connection.retry.count
 rabbitmq.optional.12=rabbitmq.connection.retry.interval
 rabbitmq.optional.13=rabbitmq.server.virtual.host
-rabbitmq.optional.14=rabbitmq.server.retry.interval
-rabbitmq.optional.15=rabbitmq.factory.heartbeat
-rabbitmq.optional.16=rabbitmq.connection.ssl.enabled ~:~ false ~:~ true
-rabbitmq.optional.17=rabbitmq.connection.ssl.keystore.location
-rabbitmq.optional.18=rabbitmq.connection.ssl.keystore.type
-rabbitmq.optional.19=rabbitmq.connection.ssl.keystore.password
-rabbitmq.optional.20=rabbitmq.connection.ssl.truststore.location
-rabbitmq.optional.21=rabbitmq.connection.ssl.truststore.type
-rabbitmq.optional.22=rabbitmq.connection.ssl.truststore.password
-rabbitmq.optional.23=rabbitmq.connection.ssl.version
+rabbitmq.optional.14=rabbitmq.channel.consumer.qos
+rabbitmq.optional.15=rabbitmq.consumer.tag
+rabbitmq.optional.16=rabbitmq.message.max.dead.lettered.count
+rabbitmq.optional.17=rabbitmq.message.error.queue.routing.key
+rabbitmq.optional.18=rabbitmq.message.error.exchange.name
+rabbitmq.optional.19=rabbitmq.factory.heartbeat
+rabbitmq.optional.20=rabbitmq.connection.ssl.enabled ~:~ false ~:~ true
+rabbitmq.optional.21=rabbitmq.connection.ssl.keystore.location
+rabbitmq.optional.22=rabbitmq.connection.ssl.keystore.type
+rabbitmq.optional.23=rabbitmq.connection.ssl.keystore.password
+rabbitmq.optional.24=rabbitmq.connection.ssl.truststore.location
+rabbitmq.optional.25=rabbitmq.connection.ssl.truststore.type
+rabbitmq.optional.26=rabbitmq.connection.ssl.truststore.password
+rabbitmq.optional.27=rabbitmq.connection.ssl.version
 
 ws.mandatory=4
 ws.mandatory.1=inbound.ws.port
