Fix issue in adding Kerberos mediator using Management Console Fixes https://github.com/wso2/product-ei/issues/5151

--- a/components/mediation-ui/mediators-ui/org.wso2.carbon.mediator.kerberos.ui/pom.xml
+++ b/components/mediation-ui/mediators-ui/org.wso2.carbon.mediator.kerberos.ui/pom.xml
@@ -44,8 +44,7 @@
                         <Bundle-Activator>org.wso2.carbon.mediator.kerberos.ui.internal.KerberosMediatorActivator</Bundle-Activator>
                         <Carbon-Component>UIBundle</Carbon-Component>
                         <Export-Package>
-                            !org.wso2.carbon.mediator.kerberos.ui.*
-                            org.wso2.carbon.mediator.kerberos.*,
+                            org.wso2.carbon.mediator.kerberos.ui.*,
                             !javax.servlet,
                             !javax.servlet.http,
                         </Export-Package>
