Fix wso2/product-ei#5174 Enable sftp parameters in management console

--- a/components/mediation-ui/org.wso2.carbon.inbound.ui/src/main/resources/config/inbound.properties
+++ b/components/mediation-ui/org.wso2.carbon.inbound.ui/src/main/resources/config/inbound.properties
@@ -17,7 +17,7 @@ file.mandatory.3=coordination ~:~ true ~:~ false
 file.mandatory.4=transport.vfs.FileURI
 file.mandatory.5=transport.vfs.ContentType
 
-file.optional=24
+file.optional=27
 file.optional.1=transport.vfs.FileNamePattern
 file.optional.2=transport.vfs.FileProcessInterval
 file.optional.3=transport.vfs.FileProcessCount
@@ -42,6 +42,9 @@ file.optional.21=transport.vfs.Streaming ~:~ false ~:~ true
 file.optional.22=transport.vfs.Build ~:~ false ~:~ true
 file.optional.23=pinnedServers
 file.optional.24=transport.vfs.waitTimeBeforeRead
+file.optional.25=transport.vfs.SFTPIdentities
+file.optional.26=transport.vfs.SFTPIdentityPassPhrase
+file.optional.27=transport.vfs.SFTPUserDirIsRoot ~:~ true ~:~ false
 
 jms.mandatory=10
 jms.mandatory.1=interval
