Fix feature installation faliure
Fix feature installation faliure due to missing dependencies.

--- a/features/mediator-features/entitlement-mediator-feature/org.wso2.carbon.identity.entitlement.mediator.feature/pom.xml
+++ b/features/mediator-features/entitlement-mediator-feature/org.wso2.carbon.identity.entitlement.mediator.feature/pom.xml
@@ -79,7 +79,7 @@
                                     <propertyDef>org.wso2.carbon.p2.category.type:server</propertyDef>
                                 </properties>
                             </adviceFile>
-                            <bundles>
+                            <bundles><bundleDef>javax.annotation:javax.annotation-api</bundleDef>
                                 <bundleDef>libthrift.wso2:libthrift</bundleDef>
                                 <bundleDef>org.wso2.carbon.identity.agent.entitlement.mediator:org.wso2.carbon.identity.entitlement.proxy</bundleDef>
                                 <bundleDef>org.wso2.carbon.mediation:org.wso2.carbon.identity.entitlement.mediator</bundleDef>
@@ -88,6 +88,7 @@
                                 <bundleDef>slf4j.wso2:slf4j</bundleDef>
                                 <bundleDef>org.wso2.orbit.org.opensaml:opensaml</bundleDef>
                                 <bundleDef>org.wso2.carbon.identity.saml.common:org.wso2.carbon.identity.saml.common.util</bundleDef>
+                                <bundleDef>javax.annotation:javax.annotation-api</bundleDef>
                             </bundles>
                             <importFeatures>
                                 <!--<importFeatureDef>org.wso2.carbon.core.server:compatible:${carbon.kernel.import.feature.version}</importFeatureDef>-->
