--- a/components/mediation-admin/org.wso2.carbon.mediation.security/pom.xml
+++ b/components/mediation-admin/org.wso2.carbon.mediation.security/pom.xml
@@ -49,6 +49,10 @@
             <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.bettercloud</groupId>
+            <artifactId>vault-java-driver</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -65,7 +69,7 @@
                             org.wso2.carbon.mediation.security.*,
                         </Export-Package>
                         <Import-Package>
-                            org.apache.synapse.*,
+                            org.apache.synapse.*;version="0.0.0",
                             org.apache.axiom.*;
                             version="${axiom.osgi.version.range}",
                             org.apache.commons.logging; version="${import.package.version.commons.logging}",
