--- a/components/mediation-connector/org.wso2.carbon.connector.core/pom.xml
+++ b/components/mediation-connector/org.wso2.carbon.connector.core/pom.xml
@@ -44,6 +44,7 @@
                         </Export-Package>
                         <Import-Package>
                             !javax.xml.soap,
+                            javax.activation; version="${javax.activation.version}",
                             javax.xml.stream.*; version="${javax.xml.stream.imp.pkg.version}",
                             org.apache.axis2.rpc.receivers; version="${axis2.osgi.version.range}",
                             org.apache.axiom.*; version="${axiom.osgi.version.range}",
