Add OpenAPI 3.0 support to API and Dataservices
Add API -> OpenApi 3.0 and Dataservice -> OpenApi 3.0 support
Add OpeanApi 3.0 -> synapse API support
Generate updated API/swagger from a given wagger/API.
Fixes wso2/micro-integrator/issues/2043

--- a/components/mediation-initializer/org.wso2.carbon.mediation.transport.handlers/pom.xml
+++ b/components/mediation-initializer/org.wso2.carbon.mediation.transport.handlers/pom.xml
@@ -105,12 +105,12 @@
             <artifactId>org.wso2.carbon.mediation.commons</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-models</artifactId>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-core</artifactId>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-models</artifactId>
         </dependency>
     </dependencies>
 </project>
