--- a/pom.xml
+++ b/pom.xml
@@ -2390,34 +2390,19 @@
                 <version>${saml.common.util.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-models</artifactId>
-                <version>${io.swagger.models.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.swagger</groupId>
+                <groupId>io.swagger.core.v3</groupId>
                 <artifactId>swagger-core</artifactId>
-                <version>${io.swagger.core.version}</version>
+                <version>${swagger.core.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-annotations</artifactId>
-                <version>${io.swagger.annotation.version}</version>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-models</artifactId>
+                <version>${swagger.core.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.fasterxml.jackson.dataformat</groupId>
-                <artifactId>jackson-dataformat-yaml</artifactId>
-                <version>${jackson.dataformat.yaml.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>javax.validation</groupId>
-                <artifactId>validation-api</artifactId>
-                <version>${javax.validation.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.yaml</groupId>
-                <artifactId>snakeyaml</artifactId>
-                <version>${snakeyaml.version}</version>
+                <groupId>org.wso2.orbit.io.swagger.parser.v3</groupId>
+                <artifactId>swagger-parser-v3</artifactId>
+                <version>${swagger.parser.orbit.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.bettercloud</groupId>
@@ -2617,12 +2602,10 @@
         <maven.bundle.plugin.version>3.2.0</maven.bundle.plugin.version>
         <saml.common.util.version>1.0.3</saml.common.util.version>
         <opensaml.orbit.version>3.3.1.wso2v1</opensaml.orbit.version>
-        <io.swagger.models.version>1.5.23</io.swagger.models.version>
-        <io.swagger.core.version>1.5.23</io.swagger.core.version>
-        <io.swagger.annotation.version>1.5.23</io.swagger.annotation.version>
         <jackson.dataformat.yaml.version>2.10.3</jackson.dataformat.yaml.version>
-        <javax.validation.version>1.1.0.Final</javax.validation.version>
-        <snakeyaml.version>1.25</snakeyaml.version>
+        <!-- OAS3 Versions -->
+        <swagger.core.version>2.1.6</swagger.core.version>
+        <swagger.parser.orbit.version>2.0.24.wso2v1</swagger.parser.orbit.version>
     </properties>
     <pluginRepositories>
         <pluginRepository>
