--- a/components/mediation-commons/pom.xml
+++ b/components/mediation-commons/pom.xml
@@ -54,16 +54,8 @@
             <artifactId>gson</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-models</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.orbit.io.swagger.parser.v3</groupId>
-            <artifactId>swagger-parser-v3</artifactId>
+            <groupId>org.wso2.orbit.io.swagger.v3</groupId>
+            <artifactId>swagger-parser</artifactId>
         </dependency>
     </dependencies>
 
