--- a/components/mediation-initializer/org.wso2.carbon.mediation.transport.handlers/pom.xml
+++ b/components/mediation-initializer/org.wso2.carbon.mediation.transport.handlers/pom.xml
@@ -105,12 +105,8 @@
             <artifactId>org.wso2.carbon.mediation.commons</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-models</artifactId>
+            <groupId>org.wso2.orbit.io.swagger.v3</groupId>
+            <artifactId>swagger-parser</artifactId>
         </dependency>
     </dependencies>
 </project>
