--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -18,6 +18,7 @@ jobs:
           java-version: 1.8
 
       - name: Build Carbon Mediation with Maven
+        continue-on-error: true
         run: mvn clean install --file pom.xml
       - name: Get carbon-mediation version
         run: mvn help:evaluate -Dexpression=project.version -q -DforceStdout > ../CARBON_MEDIATION_VERSION_FILE
@@ -30,18 +31,22 @@ jobs:
           repository: wso2/micro-integrator
           ref: refs/heads/master
       - name: Build micro-integrator with Maven
+        continue-on-error: true
         run: mvn clean install -Dcarbon.mediation.version=$(cat ../CARBON_MEDIATION_VERSION_FILE) -fae --file ../micro-integrator/pom.xml
 
       - name: Upload unit test coverage of carbon.mediation to Codecov
+        continue-on-error: true
         uses: codecov/codecov-action@v1.2.1
         with:
           flags: mediation_unit_tests,unit_tests
       - name: Upload unit test coverage of micro.integrator to Codecov
+        continue-on-error: true
         uses: codecov/codecov-action@v1.2.1
         with:
           flags: mi_unit_tests,unit_tests
           directory: ../micro-integrator/components/
       - name: Upload integration test coverage of micro.integrator to Codecov
+        continue-on-error: true
         uses: codecov/codecov-action@v1.2.1
         with:
           flags: integration_tests
