Fix noclassdef issue for inboundendpoints
Fixes: https://github.com/wso2/product-ei/issues/5377

--- a/components/inbound-endpoints/org.wso2.carbon.inbound.endpoint/pom.xml
+++ b/components/inbound-endpoints/org.wso2.carbon.inbound.endpoint/pom.xml
@@ -119,6 +119,7 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Export-Package>
+                            org.wso2.carbon.inbound.endpoint.protocol.websocket,
                             org.wso2.carbon.inbound.endpoint.protocol.http.management,
                             org.wso2.carbon.inbound.endpoint.protocol.http.multitenancy,
                             org.wso2.carbon.inbound.endpoint.protocol.generic,
