remove log4j1 usage

--- a/components/inbound-endpoints/pom.xml
+++ b/components/inbound-endpoints/pom.xml
@@ -80,6 +80,10 @@
                 <groupId>javax.jms</groupId>
                 <artifactId>jms</artifactId>
             </exclusion>
+            <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+            </exclusion>
         </exclusions>
     </dependency>
     <dependency>
