Add new Inbound Endpoint that will start Netty based Http transport

--- a/features/carbon-transports/org.wso2.carbon.websocket.feature/pom.xml
+++ b/features/carbon-transports/org.wso2.carbon.websocket.feature/pom.xml
@@ -60,6 +60,26 @@
              <groupId>io.netty</groupId>
              <artifactId>netty-buffer</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-handler-proxy</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-socks</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-tcnative</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-tcnative-classes</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-tcnative-boringssl-static</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -90,7 +110,12 @@
                                 <bundleDef>io.netty:netty-codec-http:compatible:${netty.version}</bundleDef>
                                 <bundleDef>io.netty:netty-codec:compatible:${netty.version}</bundleDef>
                                 <bundleDef>io.netty:netty-buffer:compatible:${netty.version}</bundleDef>
-                                <bundleDef>io.netty:netty-handler:compatible:${netty.version}</bundleDef>                                
+                                <bundleDef>io.netty:netty-handler:compatible:${netty.version}</bundleDef>
+                                <bundleDef>io.netty:netty-tcnative:compatible:${netty.tcnative.version}</bundleDef>
+                                <bundleDef>io.netty:netty-tcnative-boringssl-static:compatible:${netty.tcnative.version}</bundleDef>
+                                <bundleDef>io.netty:netty-tcnative-classes:compatible:${netty.tcnative.version}</bundleDef>
+                                <bundleDef>io.netty:netty-handler-proxy:compatible:${netty.version}</bundleDef>
+                                <bundleDef>io.netty:netty-codec-socks:compatible:${netty.version}</bundleDef>
                             </bundles>
                             <importFeatures>
                                 <!--<importFeatureDef>org.wso2.carbon.core.server:${carbon.kernel.version}</importFeatureDef>-->
