--- a/components/inbound-endpoints/org.wso2.carbon.inbound.endpoint/pom.xml
+++ b/components/inbound-endpoints/org.wso2.carbon.inbound.endpoint/pom.xml
@@ -107,6 +107,10 @@
             <groupId>org.apache.synapse</groupId>
             <artifactId>synapse-commons</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.transport.http</groupId>
+            <artifactId>org.wso2.transport.http.netty</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
