--- a/features/inbound-endpoints/org.wso2.carbon.inbound.endpoints.server.feature/pom.xml
+++ b/features/inbound-endpoints/org.wso2.carbon.inbound.endpoints.server.feature/pom.xml
@@ -75,6 +75,10 @@
             <artifactId>netty-resolver</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-tcnative-classes</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.aries.blueprint</groupId>
             <artifactId>org.apache.aries.blueprint</artifactId>
         </dependency>
@@ -126,6 +130,7 @@
                                 <bundleDef>io.netty:netty-buffer:compatible:${netty.version}</bundleDef>
                                 <bundleDef>io.netty:netty-handler:compatible:${netty.version}</bundleDef>
                                 <bundleDef>io.netty:netty-resolver:compatible:${netty.version}</bundleDef>
+                                <bundleDef>io.netty:netty-tcnative-classes:compatible:${netty.tcnative.version}</bundleDef>
                                 <bundleDef>org.apache.aries.blueprint:org.apache.aries.blueprint</bundleDef>
                                 <bundleDef>org.apache.aries.proxy:org.apache.aries.proxy</bundleDef>
                                 <bundleDef>org.apache.aries:org.apache.aries.util</bundleDef>
