Fix compilation failure

--- a/pom.xml
+++ b/pom.xml
@@ -371,7 +371,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.velocity</groupId>
-                <artifactId>velocity-engine</artifactId>
+                <artifactId>velocity</artifactId>
                 <version>${org.apache.velocity.version}</version>
             </dependency>
             <dependency>
